Added Internal Links

--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
         <nav role="navigation">
             <ul>
                 <li><a href="#top" title="Bmore City Guide Home" class="scroll">Home</a></li>
-                <li><a href="#cafe" title="Coffe Shops & Cafes" class="scroll">Cafe</a></li>
+                <li><a href="#Artifact" title="Coffe Shops & Cafes" class="scroll">Artifact</a></li>
+                <li><a href="#Dooby's" title="Coffe Shops & Cafes" class="scroll">Dooby's</a></li>
+                <li><a href="#Vaccaro's" title="Coffe Shops & Cafes" class="scroll">Vaccaro's</a></li>
+                <li><a href="#Charmington's" title="Coffe Shops & Cafes" class="scroll">Charmington's</a></li>
                 <li><a href="#photocredits" title="Photo Credits" class="scroll">Credits</a></li>
             </ul>
         </nav>
@@ -27,7 +30,7 @@
             <img src="img/Baltimore%20Coffee.jpg" alt="Baltimore Coffee Shops"/>
         </header>
         <main role="main">
-            <a id="cafe"></a>
+          <a id="Artifact"></a>
             <section class="cafe">
                  <article class="cafe-location">
                     <header class="cafe-location-info">
@@ -50,6 +53,7 @@
 					</div>
                 </article>
                 <article class="cafe-location">
+                  <a id="Dooby's"></a>
 	                <header class="cafe-location-info">
                         <h1><a href="http://www.doobys.com/" target="_blank" title="Dooby's Coffee Website">Dooby's Coffee</a></h1>
                         <p data-lazy-load="img/Dooby's.png" class="loading">
@@ -82,8 +86,9 @@
 					</div>
                 </article>
                 <article class="cafe-location">
+                   <a id="Vaccaro's"></a>
 	                <header class="cafe-location-info">
-                        <h1><a href="http://www.vaccarospastry.com/index.jsp" target="_blank" title="Vaccaro's Website">Vaccaro's Italian Pastry Shop</a></h1>
+                        <h1><a href="http://www.vaccarospastry.com/index.jsp" target="_blank" title="Vaccaro's                                         Website">Vaccaro's Italian Pastry Shop</a></h1>
                         <p data-lazy-load="img/Vaccaros%20-%20Outside.JPG" class="loading">
                             <a href="img/Vaccaros%20-%20Outside.JPG" 
                                target="_blank" 
@@ -114,8 +119,9 @@
 					</div>
                 </article>
                  <article class="cafe-location">
+                   <a id="Charmington's"></a>
 	                <header class="cafe-location-info">
-                        <h1><a href="http://charmingtons.com/" target="_blank" title="Charmington's Website">Charmington's</a></h1>
+                        <h1><a href="http://charmingtons.com/" target="_blank" title="Charmington's                                                     Website">Charmington's</a></h1>
                         <p data-lazy-load="img/Charmington'sExterior.jpg" class="loading">
                             <a href="img/Charmington'sExterior.jpg" 
                                target="_blank" 
